tests/negative/test_expr_bin_bad_types.orb
fnc main() {
    i32 x = 1;
    c8 a = 'a';
    x+a;
}